--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - canvas firework - v2 - happy lunar new year 2017!</title>
+  <title>NQSC2025</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
 <style>
@@ -40,7 +40,7 @@
     <source src="music.mp3" type="audio/mpeg">
     </audio>
 <div class="container">
-  <button id="playButton">Play Music</button>
+  <button id="playButton">Start</button>
   <canvas id="canvas"></canvas>
   
 </div>
@@ -81,7 +81,8 @@
   <audio class="launch" src="http://static.dar-studio.com/codepen/audio/firework/launch5.mp3" controls="controls"></audio>
 </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'>
+  </script><script  src="./script.js"></script>
 
 </body>
 </html>
