--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       border-radius: 20px;
       display: block;
       /* Ensure it's initially visible */
-      
+      opacity: 0;
+      display: none; 
       /* Start fully transparent */
       transition: opacity 1s ease-in-out;
       /* Smooth transition for opacity */
