--- a/index.html
+++ b/index.html
@@ -29,20 +29,32 @@
       opacity: 0.8;
     }
 
-    #image {
+    #content {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      border-radius: 20px;
-      display: block;
-      /* Ensure it's initially visible */
-      opacity: 0;
-      display: none; 
-      /* Start fully transparent */
+      /* Center #content */
+      width: 100%;
+      /* Adjust width as needed */
+      text-align: center;
+      /* Center-align text inside */
       transition: opacity 1s ease-in-out;
-      /* Smooth transition for opacity */
-      width: 50%;
+      display: none;
+      opacity: 0;
+    }
+
+    #image {
+      width: 90%;
+      border-radius: 20px;
+    }
+
+    #text {
+      font-size: 60px;
+      color: white;
+      font-family: 'Arial';
+      font-weight: bold;
+      text-shadow: 2px 2px 4px #000000;
     }
   </style>
 </head>
@@ -59,7 +71,11 @@
   <div class="container">
     <button id="playButton">Start</button>
     <canvas id="canvas"></canvas>
-    <img src="/image.png" id="image">
+    <div id="content">
+      <img src="/image.png" id="image">
+      <h1 id="text">Ngo Quyen Spring Camp 2025</h1>
+    </div>
+
   </div>
   <div class="block-audio">
     <audio class="exp" src="http://static.dar-studio.com/codepen/audio/firework/exp1.mp3" controls="controls"></audio>
