--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       text-align: center;
       /* Center-align text inside */
       transition: opacity 1s ease-in-out;
-
+      display: none;
+      opacity: 0;
     }
-
+    
 
     #image {
       width: 90%;
